--- a/template.ipynb
+++ b/template.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-10-31T23:36:28.652554Z",
@@ -24,6 +24,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import sys\n",
     "\n",
     "import plotly.express as px\n",
     "pd.options.plotting.backend = 'plotly'\n",
@@ -40,11 +41,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO"
+    "# TODO \n",
+    "# are teams with VI or Jinx more likely to win??????????????????\n",
+    "games = pd.read_csv('2022.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gameid</th>\n",
+       "      <th>datacompleteness</th>\n",
+       "      <th>url</th>\n",
+       "      <th>league</th>\n",
+       "      <th>...</th>\n",
+       "      <th>deathsat25</th>\n",
+       "      <th>opp_killsat25</th>\n",
+       "      <th>opp_assistsat25</th>\n",
+       "      <th>opp_deathsat25</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ESPORTSTMNT01_2690210</td>\n",
+       "      <td>complete</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LCKC</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ESPORTSTMNT01_2690210</td>\n",
+       "      <td>complete</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LCKC</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ESPORTSTMNT01_2690210</td>\n",
+       "      <td>complete</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LCKC</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ESPORTSTMNT01_2690210</td>\n",
+       "      <td>complete</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LCKC</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ESPORTSTMNT01_2690210</td>\n",
+       "      <td>complete</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LCKC</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 161 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  gameid datacompleteness  url league  ...  deathsat25  \\\n",
+       "0  ESPORTSTMNT01_2690210         complete  NaN   LCKC  ...         1.0   \n",
+       "1  ESPORTSTMNT01_2690210         complete  NaN   LCKC  ...         2.0   \n",
+       "2  ESPORTSTMNT01_2690210         complete  NaN   LCKC  ...         0.0   \n",
+       "3  ESPORTSTMNT01_2690210         complete  NaN   LCKC  ...         2.0   \n",
+       "4  ESPORTSTMNT01_2690210         complete  NaN   LCKC  ...         2.0   \n",
+       "\n",
+       "  opp_killsat25  opp_assistsat25 opp_deathsat25  \n",
+       "0           0.0              2.0            0.0  \n",
+       "1           1.0              5.0            1.0  \n",
+       "2           3.0              4.0            3.0  \n",
+       "3           3.0              4.0            0.0  \n",
+       "4           0.0              7.0            2.0  \n",
+       "\n",
+       "[5 rows x 161 columns]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "games.head()"
    ]
   },
   {
@@ -56,16 +189,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-10-31T23:36:28.657068Z",
      "start_time": "2019-10-31T23:36:28.654650Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO: Data Clean\n",
+    "# for x in games.columns:\n",
+    "#     print(x)\n",
+    "# np.set_printoptions(threshold=sys.maxsize)\n",
+    "# print(list(games.columns))\n",
+    "\n",
+    "\n",
+    "# we need pick 1-5 and result\n",
+    "games['result'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pick1</th>\n",
+       "      <th>pick2</th>\n",
+       "      <th>pick3</th>\n",
+       "      <th>pick4</th>\n",
+       "      <th>pick5</th>\n",
+       "      <th>result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Jinx</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>Jinx</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>Jinx</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>150562</th>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Vi</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>150575</th>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Vi</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>150587</th>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>Vi</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3861 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       pick1 pick2 pick3 pick4 pick5  result\n",
+       "11      Jinx  <NA>  <NA>  <NA>  <NA>       1\n",
+       "34      Jinx  <NA>  <NA>  <NA>  <NA>       1\n",
+       "58      Jinx  <NA>  <NA>  <NA>  <NA>       1\n",
+       "...      ...   ...   ...   ...   ...     ...\n",
+       "150562  <NA>    Vi  <NA>  <NA>  <NA>       1\n",
+       "150575  <NA>    Vi  <NA>  <NA>  <NA>       0\n",
+       "150587  <NA>    Vi  <NA>  <NA>  <NA>       1\n",
+       "\n",
+       "[3861 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# games.loc[:, ['pick1', 'pick2','pick3','pick4','pick5','result']]\n",
+    "# def func(x):\n",
+    "#     columns = ['pick1', 'pick2','pick3','pick4','pick5','result']\n",
+    "#     # print(x)\n",
+    "#     for col in columns:\n",
+    "#         if pd.isna(x[col]):\n",
+    "#             return None\n",
+    "#     return x totally unecessary\n",
+    "\n",
+    "#change non vi/jinx games to nan to remove\n",
+    "games_edited = games.copy()\n",
+    "games_edited['pick1'] = games_edited['pick1'].transform(lambda x : np.where((x != \"Jinx\") & (x != \"Vi\"), pd.NA, x))\n",
+    "games_edited['pick2'] = games_edited['pick2'].transform(lambda x : np.where((x != \"Jinx\") & (x != \"Vi\"), pd.NA, x))\n",
+    "games_edited['pick3'] = games_edited['pick3'].transform(lambda x : np.where((x != \"Jinx\") & (x != \"Vi\"), pd.NA, x))\n",
+    "games_edited['pick4'] = games_edited['pick4'].transform(lambda x : np.where((x != \"Jinx\") & (x != \"Vi\"), pd.NA, x))\n",
+    "games_edited['pick5'] = games_edited['pick5'].transform(lambda x : np.where((x != \"Jinx\") & (x != \"Vi\"), pd.NA, x))\n",
+    "\n",
+    "#remove all games with nan values or no vi/jinx\n",
+    "games_edited = games_edited.dropna(how='all', subset=['pick1','pick2','pick3','pick4','pick5'])\n",
+    "games_edited = games_edited.dropna(subset=['result'])\n",
+    "\n",
+    "\n",
+    "games_edited[['pick1','pick2','pick3','pick4','pick5','result']]"
    ]
   },
   {
@@ -79,7 +378,25 @@
    },
    "outputs": [],
    "source": [
-    "# TODO"
+    "# TODO: Analysis, univariate/bivariate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Aggregates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO: Imputation"
    ]
   },
   {
@@ -100,7 +417,7 @@
    },
    "outputs": [],
    "source": [
-    "# TODO"
+    "# TOD"
    ]
   },
   {
@@ -148,7 +465,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "pds",
    "language": "python",
    "name": "python3"
   },
