--- a/template.ipynb
+++ b/template.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-10-31T23:36:28.652554Z",
@@ -42,13 +42,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO \n",
     "# are teams with VI or Jinx more likely to win??????????????????\n",
     "games = pd.read_csv('2022.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(150588, 161)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "games.shape"
    ]
   },
   {
@@ -223,6 +243,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20378, 161)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "games[\n",
+    "    games['pick1'].notna() &\n",
+    "    games['pick2'].notna() &\n",
+    "    games['pick3'].notna() &\n",
+    "    games['pick4'].notna() &\n",
+    "    games['pick5'].notna()\n",
+    "].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -370,97 +416,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Jinx</th>\n",
-       "      <th>Vi</th>\n",
-       "      <th>Result</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>166</th>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>191</th>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>202</th>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>10 rows × 3 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     Jinx     Vi  Result\n",
-       "11   True  False       1\n",
-       "34   True  False       1\n",
-       "58   True  False       1\n",
-       "..    ...    ...     ...\n",
-       "166  True  False       1\n",
-       "191  True  False       0\n",
-       "202  True  False       0\n",
-       "\n",
-       "[10 rows x 3 columns]"
+       "(3861, 3)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +436,7 @@
     "one_hot[\"Jinx\"] = games_edited.eq(\"Jinx\").any(axis=1)\n",
     "one_hot[\"Vi\"] = games_edited.eq(\"Vi\").any(axis=1)\n",
     "one_hot[\"Result\"] = games_edited[\"result\"]\n",
-    "one_hot.head(10)"
+    "one_hot.shape"
    ]
   },
   {
