--- a/template.ipynb
+++ b/template.ipynb
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "(20378, 161)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "[3861 rows x 6 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,16 +416,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Jinx</th>\n",
+       "      <th>Vi</th>\n",
+       "      <th>Result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>150562</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>150575</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>150587</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3861 rows × 3 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(3861, 3)"
+       "         Jinx     Vi  Result\n",
+       "11       True  False       1\n",
+       "34       True  False       1\n",
+       "58       True  False       1\n",
+       "...       ...    ...     ...\n",
+       "150562  False   True       1\n",
+       "150575  False   True       0\n",
+       "150587  False   True       1\n",
+       "\n",
+       "[3861 rows x 3 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +517,7 @@
     "one_hot[\"Jinx\"] = games_edited.eq(\"Jinx\").any(axis=1)\n",
     "one_hot[\"Vi\"] = games_edited.eq(\"Vi\").any(axis=1)\n",
     "one_hot[\"Result\"] = games_edited[\"result\"]\n",
-    "one_hot.shape"
+    "one_hot"
    ]
   },
   {
@@ -6207,11 +6288,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Jinx   Vi\n",
+      "Result           \n",
+      "0       1675  303\n",
+      "1       1674  266\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Aggregates"
+    "# TODO: Aggregates\n",
+    "grouped_counts = one_hot.groupby('Result')[['Jinx', 'Vi']].sum()\n",
+    "print(grouped_counts)"
    ]
   },
   {
@@ -6240,8 +6334,52 @@
     }
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "# TOD"
+    "from sklearn.compose import ColumnTransformer, make_column_transformer\n",
+    "from sklearn.preprocessing import FunctionTransformer, PolynomialFeatures, OneHotEncoder\n",
+    "from sklearn.pipeline import Pipeline, make_pipeline\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Get training and test data\n",
+    "\n",
+    "X = prediction_data[['pick1', 'pick2','pick3','pick4','pick5','csdiffat10', 'killsat10', 'deathsat10']]\n",
+    "y = prediction_data['result']\n",
+    "\n",
+    "# Split the data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y,\n",
+    "    test_size=0.2,\n",
+    "    random_state=42,\n",
+    "    shuffle=True\n",
+    ")\n",
+    "\n",
+    "\n",
+    "def func(x):\n",
+    "    return pd.DataFrame({'total': (x[['pick1', 'pick2', 'pick3', 'pick4', 'pick5']] == 'Jinx').any(axis=1).astype(int) + 2*(x[['pick1', 'pick2', 'pick3', 'pick4', 'pick5']] == 'Vi').any(axis=1).astype(int)})\n",
+    "\n",
+    "one_hot_encode = make_pipeline(\n",
+    "    FunctionTransformer(func),\n",
+    "    (OneHotEncoder(drop='first'))\n",
+    ")\n",
+    "\n",
+    "preprocess = make_column_transformer(\n",
+    "    (one_hot_encode, ['pick1','pick2','pick3','pick4','pick5']), \n",
+    "    ('passthrough', ['csdiffat10', 'killsat10', 'deathsat10'])\n",
+    ")\n",
+    "pipeline = make_pipeline(\n",
+    "    (preprocess),\n",
+    "    (LogisticRegression())\n",
+    ")\n",
+    "pipeline.fit(X=X_train, y=y_train)"
    ]
   },
   {
@@ -6262,7 +6400,65 @@
    },
    "outputs": [],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "from sklearn.compose import ColumnTransformer, make_column_transformer\n",
+    "from sklearn.preprocessing import FunctionTransformer, PolynomialFeatures, OneHotEncoder\n",
+    "from sklearn.pipeline import Pipeline, make_pipeline\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Get training and test data\n",
+    "\n",
+    "X = prediction_data[['pick1', 'pick2','pick3','pick4','pick5','csdiffat10', 'killsat10', 'deathsat10']]\n",
+    "y = prediction_data['result']\n",
+    "\n",
+    "# Split the data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y,\n",
+    "    test_size=0.2,\n",
+    "    random_state=42,\n",
+    "    shuffle=True\n",
+    ")\n",
+    "\n",
+    "\n",
+    "def func(x):\n",
+    "    return pd.DataFrame({'total': (x[['pick1', 'pick2', 'pick3', 'pick4', 'pick5']] == 'Jinx').any(axis=1).astype(int) + 2*(x[['pick1', 'pick2', 'pick3', 'pick4', 'pick5']] == 'Vi').any(axis=1).astype(int)})\n",
+    "\n",
+    "one_hot_encode = make_pipeline(\n",
+    "    FunctionTransformer(func),\n",
+    "    (OneHotEncoder(drop='first'))\n",
+    ")\n",
+    "\n",
+    "preprocess = make_column_transformer(\n",
+    "    (one_hot_encode, ['pick1','pick2','pick3','pick4','pick5']), \n",
+    "    ('passthrough', ['csdiffat10', 'killsat10', 'deathsat10'])\n",
+    ")\n",
+    "pipeline = make_pipeline(\n",
+    "    (preprocess),\n",
+    "    (LogisticRegression())\n",
+    ")\n",
+    "pipeline.fit(X=X_train, y=y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "results = pipeline.predict(X_test)\n",
+    "threshold = 0.5  # Adjust if needed\n",
+    "results_classification = (results >= threshold).astype(int)\n",
+    "mse = mean_squared_error(y_test, results)\n",
+    "print(\"MSE:\", mse)\n",
+    "score = f1_score(y_test, results_classification)\n",
+    "print(\"F1-Score:\", score)\n",
+    "score = accuracy_score(y_test, results_classification)\n",
+    "print(\"Accuracy:\", score)"
    ]
   },
   {
@@ -6283,7 +6479,224 @@
    },
    "outputs": [],
    "source": [
-    "# TODO"
+    "# This new model will use logistic regression with ridge regularization\n",
+    "# The new model will use standard scalar on all 3 numerical variables to make standardize\n",
+    "# Make new features using 3 numerical\n",
+    "# Then it will use GridSearchCV to find best hyperparameters (poly_features degree and regualrization for log regression)\n",
+    "\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Get training and test data\n",
+    "\n",
+    "X = prediction_data[['pick1', 'pick2','pick3','pick4','pick5','csdiffat10', 'killsat10', 'deathsat10']]\n",
+    "y = prediction_data['result']\n",
+    "\n",
+    "# Split the data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y,\n",
+    "    test_size=0.2,\n",
+    "    random_state=42,\n",
+    "    shuffle=True\n",
+    ")\n",
+    "\n",
+    "\n",
+    "def func(x):\n",
+    "    return pd.DataFrame({'total': (x[['pick1', 'pick2', 'pick3', 'pick4', 'pick5']] == 'Jinx').any(axis=1).astype(int) + 2*(x[['pick1', 'pick2', 'pick3', 'pick4', 'pick5']] == 'Vi').any(axis=1).astype(int)})\n",
+    "\n",
+    "one_hot_encode = make_pipeline(\n",
+    "    FunctionTransformer(func),\n",
+    "    (OneHotEncoder(drop='first'))\n",
+    ")\n",
+    "\n",
+    "preprocess = make_column_transformer(\n",
+    "    (one_hot_encode, ['pick1','pick2','pick3','pick4','pick5']), \n",
+    "    (PolynomialFeatures(include_bias=False), ['csdiffat10', 'killsat10', 'deathsat10']),\n",
+    "    (StandardScaler(), ['csdiffat10', 'killsat10', 'deathsat10'])\n",
+    ")\n",
+    "pipeline = make_pipeline(\n",
+    "    (preprocess),\n",
+    "    (LogisticRegression())\n",
+    ")\n",
+    "pipeline.fit(X=X_train, y=y_train)\n",
+    "\n",
+    "param_grid = {\n",
+    "    'columntransformer__polynomialfeatures__degree': [1, 2, 3],\n",
+    "    'logisticregression__C': [0.01, 0.1, 1, 10],\n",
+    "    'logisticregression__penalty': ['l2'],\n",
+    "    'logisticregression__solver': ['lbfgs']\n",
+    "}\n",
+    "\n",
+    "# Set up GridSearchCV with F1-score as the metric\n",
+    "grid_search = GridSearchCV(pipeline, param_grid, scoring='f1', cv=5)\n",
+    "grid_search.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "print(\"Best Parameters:\", grid_search.best_params_)\n",
+    "results = grid_search.predict(X_test)\n",
+    "threshold = 0.5  # Adjust if needed\n",
+    "results_classification = (results >= threshold).astype(int)\n",
+    "mse = mean_squared_error(y_test, results)\n",
+    "print(\"MSE:\", mse)\n",
+    "score = f1_score(y_test, results_classification)\n",
+    "print(\"F1-Score:\", score)\n",
+    "score = accuracy_score(y_test, results_classification)\n",
+    "print(\"Accuracy:\", score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Trying Random Forest Classifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Get training and test data\n",
+    "\n",
+    "X = prediction_data[['pick1', 'pick2','pick3','pick4','pick5','csdiffat10', 'killsat10', 'deathsat10']]\n",
+    "y = prediction_data['result']\n",
+    "\n",
+    "# Split the data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y,\n",
+    "    test_size=0.2,\n",
+    "    random_state=42,\n",
+    "    shuffle=True\n",
+    ")\n",
+    "\n",
+    "\n",
+    "def func(x):\n",
+    "    return pd.DataFrame({'total': (x[['pick1', 'pick2', 'pick3', 'pick4', 'pick5']] == 'Jinx').any(axis=1).astype(int) + 2*(x[['pick1', 'pick2', 'pick3', 'pick4', 'pick5']] == 'Vi').any(axis=1).astype(int)})\n",
+    "\n",
+    "one_hot_encode = make_pipeline(\n",
+    "    FunctionTransformer(func),\n",
+    "    (OneHotEncoder(drop='first'))\n",
+    ")\n",
+    "\n",
+    "preprocess = make_column_transformer(\n",
+    "    (one_hot_encode, ['pick1','pick2','pick3','pick4','pick5']), \n",
+    "    (PolynomialFeatures(include_bias=False), ['csdiffat10', 'killsat10', 'deathsat10']),\n",
+    "    (StandardScaler(), ['csdiffat10', 'killsat10', 'deathsat10'])\n",
+    ")\n",
+    "pipeline = make_pipeline(\n",
+    "    (preprocess),\n",
+    "    (RandomForestClassifier(random_state=98))\n",
+    ")\n",
+    "pipeline.fit(X=X_train, y=y_train)\n",
+    "\n",
+    "param_grid = {\n",
+    "    'columntransformer__polynomialfeatures__degree': [1, 2, 3],\n",
+    "    'randomforestclassifier__n_estimators': [50, 100, 200, 300, 500]\n",
+    "}\n",
+    "\n",
+    "# Set up GridSearchCV with F1-score as the metric\n",
+    "grid_search = GridSearchCV(pipeline, param_grid, scoring='f1', cv=5)\n",
+    "grid_search.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "print(\"Best Parameters:\", grid_search.best_params_)\n",
+    "results = grid_search.predict(X_test)\n",
+    "# threshold = 0.5  # Adjust if needed\n",
+    "# results_classification = (results >= threshold).astype(int)\n",
+    "mse = mean_squared_error(y_test, results)\n",
+    "print(\"MSE:\", mse)\n",
+    "score = f1_score(y_test, results)\n",
+    "print(\"F1-Score:\", score)\n",
+    "score = accuracy_score(y_test, results)\n",
+    "print(\"Accuracy:\", score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Linear with exponential features\n",
+    "# from sklearn.model_selection import GridSearchCV\n",
+    "# from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "X = prediction_data[['pick1', 'pick2','pick3','pick4','pick5','csdiffat10', 'killsat10', 'deathsat10']]\n",
+    "y = prediction_data['result']\n",
+    "\n",
+    "# Split the data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y,\n",
+    "    test_size=0.2,\n",
+    "    random_state=98,\n",
+    "    shuffle=True\n",
+    ")\n",
+    "\n",
+    "\n",
+    "def func(x):\n",
+    "    return pd.DataFrame({'total': (x[['pick1', 'pick2', 'pick3', 'pick4', 'pick5']] == 'Jinx').any(axis=1).astype(int) + 2*(x[['pick1', 'pick2', 'pick3', 'pick4', 'pick5']] == 'Vi').any(axis=1).astype(int)})\n",
+    "\n",
+    "one_hot_encode = make_pipeline(\n",
+    "    FunctionTransformer(func),\n",
+    "    (OneHotEncoder(drop='first'))\n",
+    ")\n",
+    "\n",
+    "preprocess = make_column_transformer(\n",
+    "    (one_hot_encode, ['pick1','pick2','pick3','pick4','pick5']), \n",
+    "    (PolynomialFeatures(include_bias=False), ['csdiffat10', 'killsat10', 'deathsat10'])\n",
+    ")\n",
+    "pipeline = make_pipeline(\n",
+    "    (preprocess),\n",
+    "    (LinearRegression())\n",
+    ")\n",
+    "pipeline.fit(X=X_train, y=y_train)\n",
+    "\n",
+    "param_grid = {\n",
+    "    'columntransformer__polynomialfeatures__degree': [1, 2, 3]\n",
+    "}\n",
+    "\n",
+    "# Set up GridSearchCV with F1-score as the metric\n",
+    "grid_search = GridSearchCV(pipeline, param_grid, scoring='f1', cv=5)\n",
+    "grid_search.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "print(\"Best Parameters:\", grid_search.best_params_)\n",
+    "results = grid_search.predict(X_test)\n",
+    "threshold = 0.5  # Adjust if needed\n",
+    "results_classification = (results >= threshold).astype(int)\n",
+    "mse = mean_squared_error(y_test, results)\n",
+    "print(\"MSE:\", mse)\n",
+    "score = f1_score(y_test, results_classification)\n",
+    "print(\"F1-Score:\", score)\n",
+    "score = accuracy_score(y_test, results_classification)\n",
+    "print(\"Accuracy:\", score)"
    ]
   }
  ],
