--- a/template_w_pred.ipynb
+++ b/template_w_pred.ipynb
@@ -1517,11 +1517,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Aggregates"
+    "# TODO: Aggregates\n"
    ]
   },
   {
